--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,11 @@ npm-debug.log
 .DS_Store
 # ignore all logs *.log
 **/*.log
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
